--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -1060,6 +1060,7 @@
                         <outlet property="twitterButton" destination="Kbc-JC-R0G" id="GxA-lw-7OO"/>
                         <segue destination="2" kind="modal" identifier="pushScanView" modalTransitionStyle="crossDissolve" id="YOZ-ZI-zAe"/>
                         <segue destination="71W-0H-05H" kind="push" identifier="" id="SrP-Jh-RBO"/>
+                        <segue destination="eN4-z8-AgL" kind="push" identifier="pushUsernameSegue" id="gce-s1-9QL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eG1-Af-oLG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1069,6 +1070,7 @@
         <!--Flux Register Email View Controller - Add Email-->
         <scene sceneID="fZV-R3-iKV">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wrn-tU-EFT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="registerEmailView" id="71W-0H-05H" customClass="FluxRegisterEmailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="vzf-U5-ahO"/>
@@ -1138,7 +1140,6 @@
                         <outlet property="emailTableView" destination="QN7-Gg-5Ou" id="lWd-rS-jJG"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wrn-tU-EFT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1479" y="-870"/>
         </scene>
@@ -1675,6 +1676,82 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XzD-oP-VcX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2918" y="719"/>
+        </scene>
+        <!--Flux Register Email View Controller - Pick a Name-->
+        <scene sceneID="ytO-Jc-A3e">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5qq-rz-Wnc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="registerEmailView" id="eN4-z8-AgL" customClass="FluxRegisterEmailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bka-Lp-Lwk"/>
+                        <viewControllerLayoutGuide type="bottom" id="HPH-lf-QqN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="c4n-Pg-q0D">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="fill" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ohg-6x-AEw">
+                                <rect key="frame" x="96" y="300" width="129" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountButtonAction:" destination="ODM-aT-N2z" eventType="touchUpInside" id="7od-Bd-cul"/>
+                                    <action selector="createAccountButtonAction:" destination="eN4-z8-AgL" eventType="touchUpInside" id="sFN-vd-xSz"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="Igi-2y-LHe">
+                                <rect key="frame" x="10" y="183" width="300" height="89"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="textFieldCell" rowHeight="50" id="dQG-4f-MFb" customClass="FluxTextFieldCell">
+                                        <rect key="frame" x="0.0" y="55" width="300" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dQG-4f-MFb" id="VnI-YH-z50">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="49"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3NV-yQ-yIM">
+                                                    <rect key="frame" x="265" y="17" width="15" height="15"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="checkImageView" destination="3NV-yQ-yIM" id="mff-xL-qsY"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="eN4-z8-AgL" id="0va-bL-PQu"/>
+                                    <outlet property="delegate" destination="eN4-z8-AgL" id="wQu-YR-n1V"/>
+                                </connections>
+                            </tableView>
+                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1" verticalCompressionResistancePriority="1" fixedFrame="YES" image="fluxlogo" translatesAutoresizingMaskIntoConstraints="NO" id="cj9-Ya-IaC">
+                                <rect key="frame" x="114" y="78" width="93" height="108"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.91764705879999997" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Pick a Name" id="7Ze-F9-0m1">
+                        <barButtonItem key="backBarButtonItem" title="Cancel" id="Ywp-aG-Wni"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="createAccountButton" destination="ohg-6x-AEw" id="tdR-cC-SdD"/>
+                        <outlet property="emailTableView" destination="Igi-2y-LHe" id="O4g-jH-fiW"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1479" y="158"/>
         </scene>
     </scenes>
     <resources>
