mapView user location pin tweaked. Will need further changes down the road.

--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -126,16 +126,14 @@
                                             <action selector="approveImageAction:" destination="ln0-L9-YaG" eventType="touchUpInside" id="ZJm-XU-V9E"/>
                                         </connections>
                                     </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axs-sP-3hm">
-                                        <rect key="frame" x="250" y="47" width="46" height="30"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="10L-e5-Tmx" userLabel="Snapshot share button">
+                                        <rect key="frame" x="262" y="46" width="23" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <state key="normal" title="Share">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" image="actionButtonItem">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="shareButtonAction:" destination="ln0-L9-YaG" eventType="touchUpInside" id="SOP-FV-HIo"/>
+                                            <action selector="approveImageAction:" destination="ln0-L9-YaG" eventType="touchUpInside" id="mmD-e0-pdV"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -233,7 +231,7 @@
                         <outlet property="closeButton" destination="Mt2-5Z-isg" id="cpk-p9-jCi"/>
                         <outlet property="imageCaptureSquareView" destination="UPP-yk-7fe" id="KNp-oS-9oV"/>
                         <outlet property="imageCountLabel" destination="Zi1-Yb-u00" id="8ro-SH-FxI"/>
-                        <outlet property="shareButton" destination="axs-sP-3hm" id="ZOm-jJ-7VQ"/>
+                        <outlet property="snapshotShareButton" destination="10L-e5-Tmx" id="ir4-wV-lgf"/>
                         <outlet property="topContainerView" destination="3hP-Qn-vbY" id="dBJ-m8-LOg"/>
                         <outlet property="topGradientView" destination="bYe-XU-Qb3" id="cdR-pC-1Io"/>
                         <outlet property="undoButton" destination="rsU-2Y-4PW" id="Poq-AA-9Kw"/>
@@ -1780,6 +1778,7 @@
     </scenes>
     <resources>
         <image name="MapBackToggle" width="140" height="140"/>
+        <image name="actionButtonItem" width="38" height="53"/>
         <image name="backgroundGradient_bottom" width="640" height="276"/>
         <image name="backgroundGradient_top" width="640" height="276"/>
         <image name="camButton" width="140" height="140"/>
