--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -113,7 +113,7 @@
                                 </state>
                                 <connections>
                                     <action selector="snapshotRollButtonAction:" destination="pna-MN-DvY" eventType="touchUpInside" id="jsc-7j-q3Z"/>
-                                    <segue destination="vvc-He-IAt" kind="push" id="gTR-yF-0e1"/>
+                                    <segue destination="vvc-He-IAt" kind="modal" modalTransitionStyle="coverVertical" id="gTR-yF-0e1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -148,7 +148,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="hyd-06-Oyx" customClass="FluxPhotoCollectionCell">
-                                <rect key="frame" x="10" y="54" width="92" height="92"/>
+                                <rect key="frame" x="10" y="74" width="92" height="92"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="92" height="92"/>
@@ -177,7 +177,10 @@
                             <outlet property="delegate" destination="vvc-He-IAt" id="N8h-US-BD3"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="My Snapshots" id="uWj-M4-W9C"/>
+                    <navigationItem key="navigationItem" title="My Snapshots" id="uWj-M4-W9C">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="GB6-d2-7Pb"/>
+                    </navigationItem>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2pD-b6-oTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
